--- a/PrivacyPolicy/privacyPolicy.html
+++ b/PrivacyPolicy/privacyPolicy.html
@@ -9,7 +9,7 @@
 	<body>
 		<dl class="dl">
 			<dt class="h1">隐私政策</dt>
-				<dd class="dd">本政策仅适用于 <span class="company" style="color:#000; font-weight:bold"></span> 的 <span class="appName" style="color:#000; font-weight:bold"></span> 产品和服务。</dd>
+				<dd 「class="dd"><span class="appName" style="color:#000; font-weight:bold"></span>」是一款提供时钟小组件服务的工具类产品。</dd>
                 <dd class="dd">更新时间：2021/12/23</dd>
 				<dd class="dd"><span class="company"></span>严格遵守法律法规，遵循以下隐私保护原则，为您提供更加安全、可靠的服务。请花一些时间熟悉我们的隐私惯例，如果您有任何问题，请告诉我们。</dd>
 				<dd class="dd">本隐私政策规定了<span class="company"></span>及其关联公司（下文简称“我们”）如何收集、使用、披露、处理和保护您使用的产品和服务时提供给我们的信息。若我们要求您提供某些信息，我们将仅严格遵守本隐私政策来使用这些信息。通过使用我们产品和服务，即表示您已阅读、认可并接受本隐私政策中所述之所有条款，并包括我们随时作出的任何变更。同时我们承诺遵照适用的相关法律来保护您的个人信息的隐私、机密和安全。最后，我们所希望的就是为我们的用户带来最好的体验。如果您对这一隐私政策中概括的数据处理有任何疑问，请通过详细联系方式联系我们，以便我们处理您的特殊需求。</dd>
