--- a/PrivacyPolicy/ScreenSmith/screenSmith_privacy_zh.html
+++ b/PrivacyPolicy/ScreenSmith/screenSmith_privacy_zh.html
@@ -794,28 +794,28 @@ div.code-toolbar > .toolbar > .toolbar-item > span:focus {
   color: inherit;
   text-decoration: none;
 }
-</style><script>window.MathJax = {     tex: { tags: 'ams', inlineMath: [ ['$','$'], ['\\(','\\)'] ] },     startup: {     pageReady() {       return MathJax.startup.defaultPageReady().then(function () {          window.mweb_mathjax_ready_val = 'yes';          if(window.mweb_mathjax_ready !== undefined){ mweb_mathjax_ready(); }       });     }   }};document.addEventListener('DOMContentLoaded', function(event) {    if (typeof Prism != 'undefined') {         Prism.highlightAll();     }});window.mweb_mathjax_ready_val = '';function theMWebMathJaxRenderIsReady(key){ return window.mweb_mathjax_ready_val; }</script><script>document.addEventListener('DOMContentLoaded', function(event) {window.mweb_mathjax_ready_val = 'yes';})</script></head><body><div id='markdown_content' class='markdown-body'><h2><a id="%E3%80%8Cscreensmith%E3%80%8D%E9%9A%90%E7%A7%81%E6%94%BF%E7%AD%96" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>「ScreenSmith」隐私政策</h2>
+</style><script>window.MathJax = {     tex: { tags: 'ams', inlineMath: [ ['$','$'], ['\\(','\\)'] ] },     startup: {     pageReady() {       return MathJax.startup.defaultPageReady().then(function () {          window.mweb_mathjax_ready_val = 'yes';          if(window.mweb_mathjax_ready !== undefined){ mweb_mathjax_ready(); }       });     }   }};document.addEventListener('DOMContentLoaded', function(event) {    if (typeof Prism != 'undefined') {         Prism.highlightAll();     }});window.mweb_mathjax_ready_val = '';function theMWebMathJaxRenderIsReady(key){ return window.mweb_mathjax_ready_val; }</script><script>document.addEventListener('DOMContentLoaded', function(event) {window.mweb_mathjax_ready_val = 'yes';})</script></head><body><div id='markdown_content' class='markdown-body'><h2><a id="%E3%80%8C%E4%B8%BB%E9%A2%98%E6%8D%A2%E8%82%A4%E3%80%8D%E9%9A%90%E7%A7%81%E6%94%BF%E7%AD%96" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>「主题换肤」隐私政策</h2>
 <p>更新时间：2022年10月08日</p>
-<p>「ScreenSmith」是一款提供精美主题桌面的工具。</p>
-<h5><a id="%E4%B8%BA%E8%AF%B4%E6%98%8E%E3%80%8Cscreensmith%E3%80%8D%E4%BC%9A%E5%A6%82%E4%BD%95%E6%94%B6%E9%9B%86%E3%80%81%E4%BD%BF%E7%94%A8%E5%92%8C%E5%AD%98%E5%82%A8%E6%82%A8%E7%9A%84%E4%B8%AA%E4%BA%BA%E4%BF%A1%E6%81%AF%EF%BC%8C%E6%88%91%E4%BB%AC%E5%B0%86%E9%80%9A%E8%BF%87%E6%9C%AC%E9%9A%90%E7%A7%81%E6%94%BF%E7%AD%96%E5%90%91%E6%82%A8%E9%98%90%E8%BF%B0%E7%9B%B8%E5%85%B3%E4%BA%8B%E5%AE%9C%EF%BC%8C%E5%85%B6%E4%B8%AD%E8%A6%81%E7%82%B9%E5%A6%82%E4%B8%8B%EF%BC%9A" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>为说明「ScreenSmith」会如何收集、使用和存储您的个人信息，我们将通过本隐私政策向您阐述相关事宜，其中要点如下：</h5>
+<p>「主题换肤」是一款提供精美主题桌面的工具。</p>
+<h5><a id="%E4%B8%BA%E8%AF%B4%E6%98%8E%E3%80%8C%E4%B8%BB%E9%A2%98%E6%8D%A2%E8%82%A4%E3%80%8D%E4%BC%9A%E5%A6%82%E4%BD%95%E6%94%B6%E9%9B%86%E3%80%81%E4%BD%BF%E7%94%A8%E5%92%8C%E5%AD%98%E5%82%A8%E6%82%A8%E7%9A%84%E4%B8%AA%E4%BA%BA%E4%BF%A1%E6%81%AF%EF%BC%8C%E6%88%91%E4%BB%AC%E5%B0%86%E9%80%9A%E8%BF%87%E6%9C%AC%E9%9A%90%E7%A7%81%E6%94%BF%E7%AD%96%E5%90%91%E6%82%A8%E9%98%90%E8%BF%B0%E7%9B%B8%E5%85%B3%E4%BA%8B%E5%AE%9C%EF%BC%8C%E5%85%B6%E4%B8%AD%E8%A6%81%E7%82%B9%E5%A6%82%E4%B8%8B%EF%BC%9A" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>为说明「主题换肤」会如何收集、使用和存储您的个人信息，我们将通过本隐私政策向您阐述相关事宜，其中要点如下：</h5>
 <ul>
 <li>
 <p>我们将逐一说明我们收集的您的个人信息类型及其对应的用途，以便您了解我们针对某一特定功能所收集的具体个人信息的类别、使用理由及收集方式。</p>
 </li>
 <li>
-<p>当您使用一些功能时，我们会在获得您的同意后，收集您的一些敏感信息，除非按照相关法律法规要求必须收集，拒绝提供这些信息仅会使您无法使用相关特定功能，但不影响您正常使用「ScreenSmith」的其他功能。</p>
+<p>当您使用一些功能时，我们会在获得您的同意后，收集您的一些敏感信息，除非按照相关法律法规要求必须收集，拒绝提供这些信息仅会使您无法使用相关特定功能，但不影响您正常使用「主题换肤」的其他功能。</p>
 </li>
 <li>
-<p>目前，「ScreenSmith」不会主动共享或转让您的个人信息至第三方，如存在其他共享或转让您的个人信息情形时，我们会征得您的明示同意。</p>
+<p>目前，「主题换肤」不会主动共享或转让您的个人信息至第三方，如存在其他共享或转让您的个人信息情形时，我们会征得您的明示同意。</p>
 </li>
 <li>
-<p>目前，「ScreenSmith」不会主动从第三方获取您的个人信息。如未来为业务发展需要从第三方间接获取您的个人信息，我们会在获取前向您明示您个人信息的来源、类型及使用范围，如「ScreenSmith」开展业务需进行的个人信息处理活动超出您原本向第三方提供个人信息时的授权同意范围，我们将在处理您的该等个人信息前，征得您的明示同意；此外，我们也将会严格遵守相关法律法规的规定，并要求第三方保障其提供的信息的合法性。</p>
+<p>目前，「主题换肤」不会主动从第三方获取您的个人信息。如未来为业务发展需要从第三方间接获取您的个人信息，我们会在获取前向您明示您个人信息的来源、类型及使用范围，如「主题换肤」开展业务需进行的个人信息处理活动超出您原本向第三方提供个人信息时的授权同意范围，我们将在处理您的该等个人信息前，征得您的明示同意；此外，我们也将会严格遵守相关法律法规的规定，并要求第三方保障其提供的信息的合法性。</p>
 </li>
 <li>
 <p>我们将努力采取合理合法的安全措施来保护您的个人信息。特别的，我们将采用行业内通行的方式及尽最大的商业努力来保护您个人敏感信息的安全。</p>
 </li>
 </ul>
-<h5><a id="%E5%A6%82%E6%82%A8%E4%B8%8D%E5%90%8C%E6%84%8F%E6%9C%AC%E9%9A%90%E7%A7%81%E6%94%BF%E7%AD%96%E5%B9%B6%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8%EF%BC%8C%E6%88%91%E4%BB%AC%E5%B0%86%E4%BB%85%E6%94%B6%E9%9B%86%E8%83%BD%E5%A4%9F%E7%BB%B4%E6%8C%81%E2%80%9C%E3%80%8Cscreensmith%E3%80%8D%E2%80%9D%E5%9F%BA%E7%A1%80%E5%8A%9F%E8%83%BD%E6%89%80%E5%BF%85%E9%A1%BB%E7%9A%84%E4%BF%A1%E6%81%AF%E3%80%82%E8%BF%99%E5%B0%86%E5%AF%BC%E8%87%B4%E6%88%91%E4%BB%AC%E6%97%A0%E6%B3%95%E4%B8%BA%E6%82%A8%E6%8F%90%E4%BE%9B%E5%AE%8C%E6%95%B4%E7%9A%84%E4%BA%A7%E5%93%81%E5%92%8C%E6%9C%8D%E5%8A%A1%EF%BC%8C%E4%BD%86%E6%88%91%E4%BB%AC%E5%90%8C%E6%A0%B7%E4%BC%9A%E9%87%87%E5%8F%96%E7%9B%B8%E5%BA%94%E6%8E%AA%E6%96%BD%E6%9D%A5%E4%BF%9D%E6%8A%A4%E6%82%A8%E7%9A%84%E4%BF%A1%E6%81%AF%E3%80%82" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>如您不同意本隐私政策并开始使用，我们将仅收集能够维持“「ScreenSmith」”基础功能所必须的信息。这将导致我们无法为您提供完整的产品和服务，但我们同样会采取相应措施来保护您的信息。</h5>
+<h5><a id="%E5%A6%82%E6%82%A8%E4%B8%8D%E5%90%8C%E6%84%8F%E6%9C%AC%E9%9A%90%E7%A7%81%E6%94%BF%E7%AD%96%E5%B9%B6%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8%EF%BC%8C%E6%88%91%E4%BB%AC%E5%B0%86%E4%BB%85%E6%94%B6%E9%9B%86%E8%83%BD%E5%A4%9F%E7%BB%B4%E6%8C%81%E2%80%9C%E3%80%8C%E4%B8%BB%E9%A2%98%E6%8D%A2%E8%82%A4%E3%80%8D%E2%80%9D%E5%9F%BA%E7%A1%80%E5%8A%9F%E8%83%BD%E6%89%80%E5%BF%85%E9%A1%BB%E7%9A%84%E4%BF%A1%E6%81%AF%E3%80%82%E8%BF%99%E5%B0%86%E5%AF%BC%E8%87%B4%E6%88%91%E4%BB%AC%E6%97%A0%E6%B3%95%E4%B8%BA%E6%82%A8%E6%8F%90%E4%BE%9B%E5%AE%8C%E6%95%B4%E7%9A%84%E4%BA%A7%E5%93%81%E5%92%8C%E6%9C%8D%E5%8A%A1%EF%BC%8C%E4%BD%86%E6%88%91%E4%BB%AC%E5%90%8C%E6%A0%B7%E4%BC%9A%E9%87%87%E5%8F%96%E7%9B%B8%E5%BA%94%E6%8E%AA%E6%96%BD%E6%9D%A5%E4%BF%9D%E6%8A%A4%E6%82%A8%E7%9A%84%E4%BF%A1%E6%81%AF%E3%80%82" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>如您不同意本隐私政策并开始使用，我们将仅收集能够维持“「主题换肤」”基础功能所必须的信息。这将导致我们无法为您提供完整的产品和服务，但我们同样会采取相应措施来保护您的信息。</h5>
 <p>我们非常重视用户个人信息的保护，并且将以勤勉和审慎的义务对待这些信息。我们希望通过此《隐私政策》向您介绍我们对您的个人信息的处理方式，因此建议您认真完整地阅读此《隐私政策》的所有条款。<strong>其中，与您信息及权利相关的内容将以加粗的形式提示您注意，请您重点阅读。</strong> 请根据以下索引阅读相应章节：</p>
 <p>一、我们如何收集和使用您的个人信息</p>
 <p>二、对Cookie 和同类技术的使用</p>
@@ -826,20 +826,20 @@ div.code-toolbar > .toolbar > .toolbar-item > span:focus {
 <p>七、本隐私政策如何更新</p>
 <p>八、如何联系我们</p>
 <p><strong>一、 我们如何收集您的个人信息</strong></p>
-<p>在您使用「ScreenSmith」服务的过程中，我们会按照如下方式收集您在使用服务时主动提供或因为使用服务而产生的信息。<strong>我们收集这些信息将用于：①保障产品的基础正常运行。②向您提供各项功能和服务。③优化、改善产品和服务。④保障用户的使用安全。⑤遵循法律法规与国家标准的规定。</strong></p>
+<p>在您使用「主题换肤」服务的过程中，我们会按照如下方式收集您在使用服务时主动提供或因为使用服务而产生的信息。<strong>我们收集这些信息将用于：①保障产品的基础正常运行。②向您提供各项功能和服务。③优化、改善产品和服务。④保障用户的使用安全。⑤遵循法律法规与国家标准的规定。</strong></p>
 <p><strong>（一）我们主动收集与使用的个人信息</strong></p>
-<p><strong>1. 保障「ScreenSmith」软件及相关服务的正常运行</strong></p>
-<p>当您使用「ScreenSmith」及相关服务时，为了保障软件与服务的正常运行，我们会收集您的硬件型号、操作系统版本号、国际移动设备识别码（IMEI）、网络设备硬件地址（MAC）、IP地址、软件版本号、网络接入方式及类型、操作日志等信息。请您了解，这些信息是我们提供服务和保障产品正常运行所必须收集的基本信息。</p>
+<p><strong>1. 保障「主题换肤」软件及相关服务的正常运行</strong></p>
+<p>当您使用「主题换肤」及相关服务时，为了保障软件与服务的正常运行，我们会收集您的硬件型号、操作系统版本号、国际移动设备识别码（IMEI）、网络设备硬件地址（MAC）、IP地址、软件版本号、网络接入方式及类型、操作日志等信息。请您了解，这些信息是我们提供服务和保障产品正常运行所必须收集的基本信息。</p>
 <p><strong>2. 您在使用服务时上传或提供的信息</strong></p>
-<p>当您使用「ScreenSmith」的订阅服务、反馈意见服务时，我们会根据实际情况收集各种信息，例如您的订阅信息、反馈意见时填写的邮箱信息。我们将使用这些信息来满足您的要求，提供相关的产品或服务，或实现反欺诈的目的。</p>
+<p>当您使用「主题换肤」的订阅服务、反馈意见服务时，我们会根据实际情况收集各种信息，例如您的订阅信息、反馈意见时填写的邮箱信息。我们将使用这些信息来满足您的要求，提供相关的产品或服务，或实现反欺诈的目的。</p>
 <!--**3. 为您提供添加时钟小组件/订制小组件服务**
 
-“时钟小组件自定义背景”是「ScreenSmith」核心的功能之一。为实现这一功能，我们会请求您授权相机（摄像头）、照片权限。如果您拒绝授权提供某些服务必要权限，将无法使用相关的功能，但不影响您正常使用「ScreenSmith」的其他功能。-->
-<h3><a id="%E5%85%B3%E4%BA%8E%E3%80%8Cscreensmith%E3%80%8D%E7%94%B3%E8%AF%B7%E5%92%8C%E4%BD%BF%E7%94%A8%E7%9A%84%E6%9D%83%E9%99%90%EF%BC%8C%E8%AF%B7%E5%8F%82%E8%A7%81%E6%9C%AC%E6%96%87%E6%9C%AB%E9%99%84%E4%BB%B6%E4%B8%AD%E7%9A%84%E3%80%8A%E6%9D%83%E9%99%90%E7%94%B3%E8%AF%B7%E4%B8%8E%E4%BD%BF%E7%94%A8%E6%83%85%E5%86%B5%E8%AF%B4%E6%98%8E%E3%80%8B" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>关于「ScreenSmith」申请和使用的权限，请参见本文末附件中的《权限申请与使用情况说明》</h3>
+“时钟小组件自定义背景”是「主题换肤」核心的功能之一。为实现这一功能，我们会请求您授权相机（摄像头）、照片权限。如果您拒绝授权提供某些服务必要权限，将无法使用相关的功能，但不影响您正常使用「主题换肤」的其他功能。-->
+<h3><a id="%E5%85%B3%E4%BA%8E%E3%80%8C%E4%B8%BB%E9%A2%98%E6%8D%A2%E8%82%A4%E3%80%8D%E7%94%B3%E8%AF%B7%E5%92%8C%E4%BD%BF%E7%94%A8%E7%9A%84%E6%9D%83%E9%99%90%EF%BC%8C%E8%AF%B7%E5%8F%82%E8%A7%81%E6%9C%AC%E6%96%87%E6%9C%AB%E9%99%84%E4%BB%B6%E4%B8%AD%E7%9A%84%E3%80%8A%E6%9D%83%E9%99%90%E7%94%B3%E8%AF%B7%E4%B8%8E%E4%BD%BF%E7%94%A8%E6%83%85%E5%86%B5%E8%AF%B4%E6%98%8E%E3%80%8B" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>关于「主题换肤」申请和使用的权限，请参见本文末附件中的《权限申请与使用情况说明》</h3>
 <p><strong>4. 保障产品、服务及用户使用安全</strong></p>
-<p>为帮助我们更好地了解「ScreenSmith」及相关服务的运行情况，以便确保运行与提供服务的安全，我们会记录网络日志信息，以及使用软件及相关服务的频率、崩溃数据、总体安装、使用情况、性能数据等信息。</p>
+<p>为帮助我们更好地了解「主题换肤」及相关服务的运行情况，以便确保运行与提供服务的安全，我们会记录网络日志信息，以及使用软件及相关服务的频率、崩溃数据、总体安装、使用情况、性能数据等信息。</p>
 <p><strong>（二）收集、使用个人信息目的变更的处理</strong></p>
-<p>请您了解，随着我们业务的发展，可能会对「ScreenSmith」的功能和提供的服务有所调整变化。原则上，当新功能或服务与旧功能等场景相关时，收集与使用的个人信息将与原处理目的具有直接或合理关联。在与原目的无直接或合理关联的场景下，我们收集、使用您的个人信息，会再次进行告知，并征得您的同意。</p>
+<p>请您了解，随着我们业务的发展，可能会对「主题换肤」的功能和提供的服务有所调整变化。原则上，当新功能或服务与旧功能等场景相关时，收集与使用的个人信息将与原处理目的具有直接或合理关联。在与原目的无直接或合理关联的场景下，我们收集、使用您的个人信息，会再次进行告知，并征得您的同意。</p>
 <p><strong>（三）依法豁免征得同意收集和使用的个人信息</strong></p>
 <p>请理解，在下列情形中，根据法律法规和/或相关国家标准，我们收集和使用您的个人信息无需征得您的授权同意：</p>
 <ul>
@@ -873,7 +873,7 @@ div.code-toolbar > .toolbar > .toolbar-item > span:focus {
 </ul>
 <p>特别注意，如信息无法单独或结合其他信息识别到您的个人身份，其不属于法律意义上您的个人信息；当您的信息可以单独或结合其他信息识别到您的个人身份时或我们将无法与任何特定个人信息建立联系的数据与其他您的个人信息结合使用时，则在结合使用期间，这些信息将作为您的个人信息按照本隐私政策处理与保护。</p>
 <p><strong>二、对Cookie 和同类技术的使用</strong></p>
-<p>Cookie 和同类技术是互联网中的通用常用技术。当您使用「ScreenSmith」及相关服务时，我们可能会使用相关技术向您的设备发送一个或多个Cookie 或匿名标识符，以收集和存储您访问、使用本产品时的信息。我们会设置认证与保障安全性的Cookie 或匿名标识符，保障产品与服务的安全、高效运转，帮助我们改进服务效率，提升响应速度。</p>
+<p>Cookie 和同类技术是互联网中的通用常用技术。当您使用「主题换肤」及相关服务时，我们可能会使用相关技术向您的设备发送一个或多个Cookie 或匿名标识符，以收集和存储您访问、使用本产品时的信息。我们会设置认证与保障安全性的Cookie 或匿名标识符，保障产品与服务的安全、高效运转，帮助我们改进服务效率，提升响应速度。</p>
 <p><strong>三、 我们如何存储和保护您的个人信息</strong></p>
 <p><strong>（一）我们如何存储您的个人信息</strong></p>
 <ol>
@@ -884,7 +884,7 @@ div.code-toolbar > .toolbar > .toolbar-item > span:focus {
 <li>信息存储的期限</li>
 </ol>
 <p>一般而言，我们仅为实现目的所必需的时间保留您的个人信息，例如：您反馈意见时填写的邮箱信息。</p>
-<p>如果您使用的是基础版服务，当您超过180天没有登录「ScreenSmith」，我们将删除您的云存储数据。</p>
+<p>如果您使用的是基础版服务，当您超过180天没有登录「主题换肤」，我们将删除您的云存储数据。</p>
 <p>当我们的产品或服务发生停止运营的情形时，我们将以推送通知、公告等形式通知您，并在合理的期限内删除您的个人信息或进行匿名化处理。</p>
 <p><strong>（二）我们如何保护您的个人信息</strong></p>
 <ol>
@@ -904,7 +904,7 @@ div.code-toolbar > .toolbar > .toolbar-item > span:focus {
 <p>我们会制定应急处理预案，并在发生用户信息安全事件时立即启动应急预案，努力阻止该等安全事件的影响和后果扩大。一旦发生用户信息安全事件（泄露、丢失等）后，我们将按照法律法规的要求，及时向您告知：安全事件的基本情况和可能的影响、我们已经采取或将要采取的处置措施、您可自主防范和降低风险的建议、对您的补救措施等。我们将及时将事件相关情况以推送通知、邮件、信函、短信等形式告知您，难以逐一告知时，我们会采取合理、有效的方式发布公告。同时，我们还将按照相关监管部门要求，上报用户信息安全事件的处置情况。</p>
 </li>
 <li>
-<p>我们谨此特别提醒您，本隐私政策提供的个人信息保护措施仅适用于「ScreenSmith」软件及相关服务。一旦您离开「ScreenSmith」及相关服务，浏览或使用其他网站、服务及内容资源，我们即没有能力及义务保护您在「ScreenSmith」软件及相关服务之外的软件、网站提交的任何个人信息，无论您登录、浏览或使用上述软件、网站是否基于「ScreenSmith」的链接或引导。</p>
+<p>我们谨此特别提醒您，本隐私政策提供的个人信息保护措施仅适用于「主题换肤」软件及相关服务。一旦您离开「主题换肤」及相关服务，浏览或使用其他网站、服务及内容资源，我们即没有能力及义务保护您在「主题换肤」软件及相关服务之外的软件、网站提交的任何个人信息，无论您登录、浏览或使用上述软件、网站是否基于「主题换肤」的链接或引导。</p>
 </li>
 </ol>
 <p><strong>四、我们如何共享、转让、公开披露您的个人信息</strong></p>
@@ -933,24 +933,24 @@ div.code-toolbar > .toolbar > .toolbar-item > span:focus {
 <p><strong>五、您的权利</strong></p>
 <p>按照国际通行惯例和做法，我们保障您对自己的个人信息行使以下权利：</p>
 <p><strong>（一）撤回授权同意</strong></p>
-<p>您可以随时在系统设置中更改对「ScreenSmith」的授权同意。当您收回同意后，我们将不再处理相应的个人信息。但您收回同意的决定，不会影响此前基于您的授权而开展的个人信息处理。</p>
+<p>您可以随时在系统设置中更改对「主题换肤」的授权同意。当您收回同意后，我们将不再处理相应的个人信息。但您收回同意的决定，不会影响此前基于您的授权而开展的个人信息处理。</p>
 <p><strong>（二）删除</strong></p>
-<p>您可以在「ScreenSmith」中删除您的文件信息和其他数据。</p>
+<p>您可以在「主题换肤」中删除您的文件信息和其他数据。</p>
 <p><strong>（三）访问隐私政策</strong></p>
 <p>您可以在应用内进入“设置”-“隐私政策”查看本隐私政策的全部内容。</p>
 <p><strong>（四）停止运营向您告知权利</strong></p>
 <p>如我们停止运营，我们将及时停止收集您个人信息的活动，将停止运营的通知以逐一送达或公告的形式通知您，并对所持有的您的个人信息进行删除或匿名化处理。</p>
 <p><strong>六、 我们如何处理未成年人的个人信息</strong></p>
-<p>我们非常重视对未成年人个人信息的保护。根据相关法律法规的规定，若您是18周岁以下的未成年人，在使用「ScreenSmith」服务前，应事先取得家长或法定监护人的书面同意。</p>
+<p>我们非常重视对未成年人个人信息的保护。根据相关法律法规的规定，若您是18周岁以下的未成年人，在使用「主题换肤」服务前，应事先取得家长或法定监护人的书面同意。</p>
 <p>我们根据国家相关法律法规的规定保护未成年人的个人信息，只会在法律允许、父母或其他监护人明确同意或保护未成年人所必要的情况下收集、使用、共享或披露未成年人的个人信息；如果我们发现在未事先获得可证实的父母同意的情况下收集了未成年人的个人信息，则会设法尽快删除相关信息。</p>
 <p><strong>七、本隐私政策如何更新</strong></p>
 <p>我们可能会适时对本隐私政策进行修订。当本隐私政策的条款发生变更时，我们会在您登录及版本更新时以推送通知、弹窗的形式向您展示变更后的隐私政策。请您注意，只有在您点击弹窗中的同意按钮后，我们才会按照更新后的隐私政策收集、使用、存储您的个人信息。</p>
 <p><strong>八、如何联系我们</strong></p>
-<p>当您有任何疑问、投诉、建议、未成年人个人信息等相关问题时，请通过电子邮箱<a href="mailto:clockcubefeedback@163.com">clockcubefeedback@163.com</a>与我们联系。我们将尽快审核所涉问题，并在验证您的用户身份后的十五个工作日内予以回复。本协议版权为「ScreenSmith」运营方所有，公司保留一切解释和修改的权利。</p>
-<h3><a id="%E9%99%84%E4%BB%B6%E4%B8%80%E3%80%8A%E3%80%8Cscreensmith%E3%80%8D%E6%9D%83%E9%99%90%E7%94%B3%E8%AF%B7%E4%B8%8E%E4%BD%BF%E7%94%A8%E6%83%85%E5%86%B5%E8%AF%B4%E6%98%8E%E3%80%8B" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>附件一 《「ScreenSmith」权限申请与使用情况说明》</h3>
+<p>当您有任何疑问、投诉、建议、未成年人个人信息等相关问题时，请通过电子邮箱<a href="mailto:clockcubefeedback@163.com">clockcubefeedback@163.com</a>与我们联系。我们将尽快审核所涉问题，并在验证您的用户身份后的十五个工作日内予以回复。本协议版权为「主题换肤」运营方所有，公司保留一切解释和修改的权利。</p>
+<h3><a id="%E9%99%84%E4%BB%B6%E4%B8%80%E3%80%8A%E3%80%8C%E4%B8%BB%E9%A2%98%E6%8D%A2%E8%82%A4%E3%80%8D%E6%9D%83%E9%99%90%E7%94%B3%E8%AF%B7%E4%B8%8E%E4%BD%BF%E7%94%A8%E6%83%85%E5%86%B5%E8%AF%B4%E6%98%8E%E3%80%8B" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>附件一 《「主题换肤」权限申请与使用情况说明》</h3>
 <ol>
 <li>
-<p>为保障「ScreenSmith」能实现与安全稳定运行之目的，我们将根据实际业务场景，申请或使用操作系统的相关权限；</p>
+<p>为保障「主题换肤」能实现与安全稳定运行之目的，我们将根据实际业务场景，申请或使用操作系统的相关权限；</p>
 </li>
 <li>
 <p>为保障您的知情权，我们通过下列列表将产品可能申请、使用的相关操作系统权限进行展示，您可以根据实际需要对相关权限进行管理；</p>
@@ -989,7 +989,7 @@ div.code-toolbar > .toolbar > .toolbar-item > span:focus {
 **拒绝提供的后果：** 无法获取iTunes音乐-->
 <p>1.<strong>【Tracking Usage Description】</strong></p>
 <p><strong>权限功能说明：</strong> 用户隐私追踪权限</p>
-<p><strong>使用场景与目的：</strong> 为了进行数据统计、衡量分析服务效果并保障服务安全和提示用户体验，「ScreenSmith」需要访问您的设备标识符</p>
+<p><strong>使用场景与目的：</strong> 为了进行数据统计、衡量分析服务效果并保障服务安全和提示用户体验，「主题换肤」需要访问您的设备标识符</p>
 <p><strong>拒绝提供的后果：</strong> 无法为您提供个性化服务</p>
 <p>2.<strong>【Privacy - Photo Library Additions Usage Description】</strong></p>
 <p><strong>权限功能说明：</strong> 访问添加照片到相册的权限</p>
@@ -999,33 +999,21 @@ div.code-toolbar > .toolbar > .toolbar-item > span:focus {
 <p><strong>权限功能说明：</strong> 健康数据的读取权限</p>
 <p><strong>使用场景与目的：</strong> 在使用健康小组件的时候需要访问健康数据</p>
 <p><strong>拒绝提供的后果：</strong> 无法添加健康数据小组件</p>
-<h3><a id="%E9%99%84%E4%BB%B6%E4%BA%8C%E3%80%8A%E3%80%8Cscreensmith%E3%80%8D%E6%8E%A5%E5%85%A5%E7%AC%AC%E4%B8%89%E6%96%B9sdk%E7%9B%AE%E5%BD%95%E3%80%8B" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>附件二 《「ScreenSmith」接入第三方SDK目录》</h3>
-<p>为保障「ScreenSmith」相关功能的实现与应用安全稳定的运行，我们将根据实际业务场景需要，接入由第三方提供的软件开发包（SDK）实现相关目的。</p>
+<h3><a id="%E9%99%84%E4%BB%B6%E4%BA%8C%E3%80%8A%E3%80%8C%E4%B8%BB%E9%A2%98%E6%8D%A2%E8%82%A4%E3%80%8D%E6%8E%A5%E5%85%A5%E7%AC%AC%E4%B8%89%E6%96%B9sdk%E7%9B%AE%E5%BD%95%E3%80%8B" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>附件二 《「主题换肤」接入第三方SDK目录》</h3>
+<p>为保障「主题换肤」相关功能的实现与应用安全稳定的运行，我们将根据实际业务场景需要，接入由第三方提供的软件开发包（SDK）实现相关目的。</p>
 <p>我们会对合作方获取信息的软件工具开发包（SDK）进行严格的安全监测，以保护数据安全。</p>
 <p>我们对接入的相关第三方SDK在目录中列明。</p>
 <p>请注意，第三方SDK可能因为其版本升级、策略调整等原因导致数据处理类型存在一定变化，请以其公式的官方说明为准。</p>
-<!--
-***1. 友盟SDK***
-
-***服务类型：*** 提供统计分析服务、消息推送服务和基础反作弊能力
-
-***获取信息：*** 设备MAC地址、唯一设备识别码（IMEI/OPENUDID/GUID）、广告标识符、SIM卡 IMSI信息、网络状态、WiFi状态、WiFi MAC地址
-
-***调用的设备权限：*** 获取网络状态、访问WiFi状态、允许应用程序联网
-
-***隐私政策：*** [https://www.umeng.com/policy](https://www.umeng.com/policy) 
- 
-
-***2. AdMob SDK***
-
-***使用目的：*** 向用户推送广告信息、反作弊
-
-***获取信息：*** 唯一标识符、设备类型和设置、操作系统、移动网络信息（包括运营商名称）以及应用版本号、IP地址、崩溃报告
-
-***调用的设备权限：*** 获取网络状态、访问WiFi状态
-
-***隐私政策：*** [https://policies.google.cn/privacy](https://policies.google.cn/privacy)
--->
+<p><em><strong>1. 友盟SDK</strong></em></p>
+<p><em><strong>服务类型：</strong></em> 提供统计分析服务、消息推送服务和基础反作弊能力</p>
+<p><em><strong>获取信息：</strong></em> 设备MAC地址、唯一设备识别码（IMEI/OPENUDID/GUID）、广告标识符、SIM卡 IMSI信息、网络状态、WiFi状态、WiFi MAC地址</p>
+<p><em><strong>调用的设备权限：</strong></em> 获取网络状态、访问WiFi状态、允许应用程序联网</p>
+<p><em><strong>隐私政策：</strong></em> <a href="https://www.umeng.com/policy">https://www.umeng.com/policy</a></p>
+<p><em><strong>2. AdMob SDK</strong></em></p>
+<p><em><strong>使用目的：</strong></em> 向用户推送广告信息、反作弊</p>
+<p><em><strong>获取信息：</strong></em> 唯一标识符、设备类型和设置、操作系统、移动网络信息（包括运营商名称）以及应用版本号、IP地址、崩溃报告</p>
+<p><em><strong>调用的设备权限：</strong></em> 获取网络状态、访问WiFi状态</p>
+<p><em><strong>隐私政策：</strong></em> <a href="https://policies.google.cn/privacy">https://policies.google.cn/privacy</a></p>
 <!-- ***3. 穿山甲SDK***
 
 ***使用目的：*** 广告投放合作、广告归因、反作弊
