--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       <div style="margin: auto; font-size: 14px; font-weight: bold; color: gray;">
         <p><strong>Contact Us</strong></p> 
         <p>联系我: clockcubefeedback@163.com</p>
-        <p>备案号码: 待备案</p>
+       <!-- <p>备案号码: 待备案</p> -->
       </div>
     </div>
   </div>
