--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
 
       <img class="iconimg" src="https://p.ipic.vip/aibcys.png">
 
-      <label class="nametext">Unzip Helper</label>
-      <label class="nametext">Unzip zip, rar, 7z files</label>
+      <label class="nametext">File Unzip</label>
+      <label class="nametext">Opener for ZIP, RAR, 7z Files</label>
       
       <label class="context" style="text-align: left;">
           This is a portable compression/decompression tool;
